<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/main_layout"
        android:orientation="vertical">
        <TextView
            style="@style/ContentText"
            android:id="@+id/title"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/textDark"
            android:text="@string/title"/>
        <TextView
            style="@style/ContentText"
            android:id="@+id/subtitle"
            android:textColor="@color/textLight"
            android:textSize="12dp"
            android:text="@string/subtitle"/>
        <TextView
            style="@style/ContentText"
            android:id="@+id/paragraph1"
            android:textColor="@color/textDark"
            android:textSize="15dp"
            android:text="@string/paragraph1"
            />
        <com.google.vr.sdk.widgets.pano.VrPanoramaView
            android:id="@+id/pano_view"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="250dp"
            />
        <TextView
            style="@style/ContentText"
            android:id="@+id/paragraph2"
            android:textColor="@color/textDark"
            android:textSize="@dimen/paragragh_text_size"
            android:text="@string/paragraph2"
            />
        <TextView
            style="@style/ContentText"
            android:id="@+id/source"
            android:textColor="@color/textDark"
            android:textSize="15dp"/>
    </LinearLayout>

</ScrollView>
