<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            style="@style/ContentText"
            android:id="@+id/video_title"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/textDark"
            android:text="@string/video_title"/>
        <TextView
            style="@style/ContentText"
            android:id="@+id/video_subtitle"
            android:textSize="12dp"
            android:textColor="@color/textLight"
            android:text="@string/video_subtitle"/>
        <TextView
            style="@style/ContentText"
            android:id="@+id/video_paragraph1"
            android:textSize="15dp"
            android:textColor="@color/textDark"
            android:text="@string/video_paragraph1"/>
        <com.google.vr.sdk.widgets.video.VrVideoView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/video_view"
            android:scrollbars="none"/>
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:id="@+id/seek_bar"
            style="?android:attr/progressBarStyleHorizontal"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status_text"
            android:text="Loading Video..."
            android:textSize="12dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_centerInparent="true"/>
        <TextView
            android:id="@+id/video_paragraph2"
            style="@style/ContentText"
            android:textColor="@color/textDark"
            android:textSize="@dimen/paragragh_text_size"
            android:text="@string/video_paragraph2"/>
        <TextView
            style="@style/ContentText"
            android:id="@+id/video_source"
            android:textColor="@color/textDark"
            android:textSize="15dp"/>
    </LinearLayout>

</ScrollView>